oop_mro/tests/trybuild/fail_static_mut_class_field.rs
use oop_mro::prelude::*;

oop_class! {
    class Counter {
        static mut VALUE: usize = 0;
    }
}

fn main() {}
